--- a/style.css
+++ b/style.css
@@ -113,6 +113,9 @@ align-items:center;
             background-size: cover;
             box-shadow: 10px 10px 5px black;
             }
+.a1, .a2, .a3 , .a4:hover{
+    cursor: pointer;
+}
 
     @media (orientation:portrait)
     {
